[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Kłak <tomasz@tomaszklak.pl>"]

[dependencies]
structopt = "0.3"
maplit="1"
rustc-hash = "1"
itertools = "0.10"
regex="1"
once_cell = "1"
memmap = "0.7"
anyhow = "1"
smallvec = "1.11.2"
rayon = "1.8.0"
num = "0.4.1"
proptest = "1.4.0"
proptest-derive = "0.4.0"

[dev-dependencies]
criterion = "0.3"
proptest = "1.4.0"
proptest-derive = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false

